springbootHazelcast/kube/postgersql/networkPolicyPostgres.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-5701-5703
spec:
  podSelector:
    matchLabels:
      role: hazelcast
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: hazelcast
      ports:
        - protocol: TCP
          port: 5701
        - protocol: TCP
          port: 5702
        - protocol: TCP
          port: 5703
